--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
     "@iamtraction/google-translate": "^1.1.2",
     "ascii-table": "^0.0.9",
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
+    "date-and-time": "^2.4.1",
     "dbd-capriham-theme": "^1.7.34",
     "discord-api-types": "^0.37.5",
     "discord-dashboard": "^2.3.41",
     "discord-together": "^1.3.31",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.1",
+    "jsdom": "^20.0.0",
     "mongoose": "^6.5.3",
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
     "pm2": "^5.2.0",
+    "promise-mysql": "^5.2.0",
+    "quick.db": "^9.0.6",
     "sourcebin": "^4.3.5",
+    "tabletojson": "^2.0.7",
     "wargamer": "^0.5.0",
     "weather-js": "^2.0.0"
   },
